# math_algorithm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: fast_inv_sqrt.cc  fast_sqrt.cc  optmath.h
test/: CMakeLists.txt  test_fast_inv_sqrt.cc  test_sqrt.cc
